--- a/index.html
+++ b/index.html
@@ -51,15 +51,68 @@
 <div class="pasos"> <h2>Etapas</h2>
 <div class="containter2">
 
-    <div class="paso1"> <img class= "primerpaso" src="./icons8-1-32.png"><p>entrevista y conseptualización</p></div>
-    <div class="paso2"><img class="segundopaso" src="./icons8-2-32.png"><p>maquetado y presentaion de borrador</p></div>
-<div class="paso3"><img class= "tercerpaso" src="./icons8-3-32.png" ><p>ajustes a pedido</p></div>
-<div class="paso4"><img class="cuartopaso" src="./icons8-4-32.png"><p>publicación y mantenimiento</p></div>
+    <div class="paso1"> <img class= "primerpaso" src="./icons8-1-32.png"><p class="contenidop">entrevista y conseptualización</p></div>
+    <div class="paso2"><img class="segundopaso" src="./icons8-2-32.png"><p class="contenidop">maquetado y presentaion de borrador</p></div>
+<div class="paso3"><img class= "tercerpaso" src="./icons8-3-32.png" ><p class="contenidop">ajustes a pedido</p></div>
+<div class="paso4"><img class="cuartopaso" src="./icons8-4-32.png"><p class="contenidop">publicación y mantenimiento</p></div>
+</div>
+</div>
+<div class="containerclien">
+<div class="clientes">
+<h2>Clientes</h2>
+<div class="wrapper">
+    <div class="letter">
+      <img class="imagen" src="./depositphotos_121012076-stock-illustration-blank-photo-icon.jpg" alt="">
+    </div>
+    <div class="letter">
+      <img class="imagen" src="./depositphotos_121012076-stock-illustration-blank-photo-icon.jpg" alt="">
+    </div>
+    <div class="letter">
+        <img class="imagen" src="./depositphotos_121012076-stock-illustration-blank-photo-icon.jpg" alt="">
+      </div>
+      <div class="letter">
+        <img class="imagen" src="./depositphotos_121012076-stock-illustration-blank-photo-icon.jpg" alt="">
+      </div>
+
+</div>
+</div>
+</div>
+
+<footer>
+<div class="containerfoot">
+<div class="foot1">
+<img class="imgfoot" src="./icons8-estación-de-trabajo-32.png" alt="">
+Correo: lucerotomas98@gmail.com
+<img class="imgfoot" src="./icons8-contactos-32.png" alt="">
+Telefono: 3364-336398
+<img class="imgfoot"src="./icons8-instagram-32.png" alt="">
+Instagram: TLucero98
+<img class="imgfoot"src="./icons8-twitter-32.png" alt="">
+Twitter: @TLucero98
+</div>
+
+
+
+
+<div class="foot2">
+<img class="imgfoot" src="./icons8-estación-de-trabajo-32.png" alt="">
+Correo: tomifede@gmail.com
+<img class="imgfoot" src="./icons8-contactos-32.png" alt="">
+Telefono: 0341-336398
+<img class="imgfoot"src="./icons8-instagram-32.png" alt="">
+Instagram: FedeLucero98
+<img class="imgfoot"src="./icons8-twitter-32.png" alt="">
+Twitter: @Fedeucero98
 
 
 
 </div>
 </div>
+
+
+
+</footer>
+
 
 </body>
 </html>
